# auto-dashboard-sales

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: dev.yaml  prod.yaml
src/core/: logging.py  settings.py
src/helpers/: carga_datos.py
src/ui/: ui_carga_datos.py
tests/: test_leer_archivo.py  test_smoke.py
tests/assets/: archivo.txt  ventas_test.csv  ventas_test.json  ventas_test.xlsx
