[project]
name = "auto-dashboard-sales"
version = "0.1.0"
description = "AutoDashboard de Ventas"
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["data", ".venv", "venv", "build", "dist", ".git", ".mypy_cache", ".ruff_cache", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
order-by-type = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q -ra"
testpaths = ["tests"]
pythonpath = ["src"]
